fix video header size/position on mobile

--- a/src/ui/components/PageResources/stylesheet.css
+++ b/src/ui/components/PageResources/stylesheet.css
@@ -25,7 +25,8 @@
 @media (max-width: 887px) {
   .video {
     width: auto;
-    height: auto;
+    height: 64rem;
+    transform: translateX(calc(-60% + 50vw));
   }
 
   .video-header {
